kubernetes/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "jenkins-master"
spec:
  backend:
    serviceName: jenkins-svc
    servicePort: 8080
